test fix for vh units on ios

--- a/components/shared/Input/Input.module.scss
+++ b/components/shared/Input/Input.module.scss
@@ -21,7 +21,7 @@
 
 .select {
 	@extend .input;
-	background: url("/public/images/bx-caret-down.svg") no-repeat;
+	background: url("/images/bx-caret-down.svg") no-repeat;
 	background-size: 12px;
 	background-position: calc(100% - 20px) center;
 	background-repeat: no-repeat;
